# yango-tech-grocery-client

./: .gitignore  DEVELOPMENT.md  EXAMPLES.md  LICENSE  README.md  client.py  pyproject.toml
.github/workflows/: publish.yml
yango_grocery_client/: base_client.py  constants.py  exceptions.py  prices.py  schema.py
yango_tech_grocery_client/: __init__.py  base_client.py  cli.py  client.py  client_third_party_logistics.py  constants.py  endpoints.py  exceptions.py  prices.py  py.typed  rate_limiter.py  schema.py  utils.py
yango_tech_grocery_client/tests/: test_rate_limiter.py
